# fraud-detection-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.automation_state/: day_01_summary.json  day_02_summary.json  day_03_summary.json  day_04_summary.json  day_05_summary.json  day_06_summary.json  day_07_summary.json  day_08_summary.json  day_09_summary.json  day_10_summary.json  day_11_summary.json  day_12_summary.json  day_13_summary.json  day_14_summary.json  day_15_summary.json  day_16_summary.json  day_17_summary.json  day_18_summary.json  day_19_summary.json  day_20_summary.json  day_21_summary.json  day_22_summary.json  day_23_summary.json  day_24_summary.json  day_25_summary.json  day_26_summary.json  day_27_summary.json  day_28_summary.json  day_29_summary.json  day_30_summary.json  run_log.txt
configs/: airflow_config.yaml  alerting_config.yaml  base_config.yaml  canary_config.yaml  case_config.yaml  consumer_config.yaml  decision_config.yaml  drift_config.yaml  feature_config.yaml  isolation_forest_config.yaml  logging_config.yaml  merchant_risk_config.yaml  mlflow_config.yaml  redis_config.yaml  rules_config.yaml  training_config.yaml  validation_config.yaml
docs/: architecture.md  deployment_guide.md  pci_dss_compliance.md  performance_report.md
notebooks/: 01_isolation_forest.ipynb  02_xgboost_training.ipynb  03_ensemble_analysis.ipynb
plan/: 30_day_plan.json
scripts/: bootstrap_repo.py  daily_automator_template.py  grafana_import.sh  mutation_test.sh  (+3 more)
(+120 files in other folders)
