[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "Real-time credit card fraud detection MLOps system"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0.2",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "xgboost>=2.0.2",
    "scikit-learn>=1.3.2",
    "mlflow>=2.9.2",
    "evidently>=0.4.11",
    "apache-airflow>=2.7.3",
    "prometheus-client>=0.19.0",
    "optuna>=3.4.0",
    "shap>=0.43.0",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "asyncpg>=0.29.0",
    "orjson>=3.9.10",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.7",
    "mypy>=1.7.1",
    "locust>=2.19.1",
    "bandit>=1.7.6",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
